--- a/src/css/components-css/Documentation.css
+++ b/src/css/components-css/Documentation.css
@@ -1,12 +1,12 @@
-
 .left-pane {
   width: 300px;
   background-color: #1b1b1d;
+  height: 100vh;
   border-right: 1px solid #444;
   display: flex;
   flex-direction: column;
-  padding: 10px;
-  position: relative; /* Make sure the position is relative to use absolute positioning inside */
+  padding: 28px 18px 36px 18px;
+  position: fixed;
 }
 
 .right-pane {
@@ -14,36 +14,35 @@
   padding: 20px;
   background-color: transparent;
   overflow-y: auto;
+  margin-left: 300px;
 }
 
-.header {
+.logos {
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
-  position: relative; /* Ensure relative positioning for the logo and version */
+  margin-bottom: 28px;
+  gap: 16px;
 }
 
-.logo {
-  width: 40px; /* Adjust size as needed */
-  height: auto;
-  margin-right: 15px; 
-  margin-left: 4%;
-  margin-top: 2%;
+.docs-logo {
+  width: 40px;
 }
 
 .header-title {
-  font-size: 1.5em;
-  flex: 1; /* Use flex to distribute space */
+  font-size: 28px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  flex: 1;
 }
 
 .version {
   font-size: 0.9em;
   color: #1ed363;
-  position: absolute; /* Position absolute within header */
-  left: 22.5%; /* Adjust to position version correctly */
-  bottom: 7%; /* Adjust to position version correctly */
+  position: absolute;
+  left: 22.5%;
+  bottom: 7%;
 }
-
+/*
 .scrollable {
   padding: 10px;
   overflow-y: auto;
@@ -53,7 +52,7 @@
 .heading {
   display: flex;
   align-items: center;
-  justify-content: space-between; /* Space between heading text and arrow */
+  justify-content: space-between;
   font-weight: bold;
   margin-top: 10px;
   font-size: 1em;
@@ -83,13 +82,13 @@
 }
 
 .arrow {
-  width: 16px; /* Adjust size as needed */
+  width: 16px;
   height: auto;
-  transition: transform 0.3s ease; /* Smooth rotation */
+  transition: transform 0.3s ease;
 }
 
 .heading.active .arrow {
-  transform: rotate(180deg); /* Rotate arrow when active */
+  transform: rotate(180deg);
 }
 
 .selected {
@@ -107,4 +106,4 @@
 .content {
   margin-top: 20px;
   padding-left: 15px;
-}
+} */
