Major Updates Documentation Updated, More Update Required!

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -5,6 +5,25 @@
   box-sizing: border-box;
 }
 
+html::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+html::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+html::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
@@ -13,6 +32,7 @@ body {
   color: #fff;
   overflow-x: hidden;
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 .section {
