--- a/src/css/components-css/SidePanel.css
+++ b/src/css/components-css/SidePanel.css
@@ -77,6 +77,7 @@
   align-items: center;
   margin-bottom: 18px;
   gap: 8px;
+  cursor: pointer;
 }
 
 .subtopics {
@@ -91,10 +92,13 @@
 
 .list-hover {
   padding: 8px;
+  font-weight: 600;
+  letter-spacing: 0.4px;
 }
 
 .list-hover.selected {
   background-color: #666666;
+  color: #fff;
   border-radius: 6px;
 }
 
@@ -132,7 +136,7 @@
 .main-content {
   max-width: 1100px;
   text-align: justify;
-  padding: 20px 0;
+  padding-top: 100px;
 }
 
 .main-para {
