--- a/src/css/components-css/TeamsCard.css
+++ b/src/css/components-css/TeamsCard.css
@@ -1,58 +1,69 @@
 .card-spl {
-    min-width: 400px;
-    background-color: #17171a;
-    color: #fff;
-    border-radius: 0%;
-    border: #000000 1px solid;
-    padding: 26px 26px 26px 26px;
-    max-width: 320px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  }
-  
+  min-width: 400px;
+  background-color: #17171a;
+  color: #fff;
+  border-radius: 0%;
+  border: #000000 1px solid;
+  padding: 26px 26px 26px 26px;
+  max-width: 320px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
 .card-spl .logo-re {
-    text-align: center;
-    width: 100%;
+  text-align: center;
+  width: 100%;
 }
-  
+
 .resource-logo {
-    margin-bottom: 16px;
-    width: 90px;
-    overflow: hidden;
-    border-radius: 50%;
-    background-color: #17171a;
+  margin-bottom: 16px;
+  width: 90px;
+  overflow: hidden;
+  border-radius: 50%;
+  background-color: #17171a;
 }
-  
+
 .card-spl .resource-title {
-    font-size: 28px;
-    margin-bottom: 10px;
+  font-size: 28px;
+  margin-bottom: 10px;
 }
-  
+
 .card-spl .description {
-    font-size: 16px;
-    margin-top: 20px;
-    margin-bottom: 26px;
-    color: #96969e;
-    text-align: justify;
-    line-height: 1.4;
+  font-size: 16px;
+  margin-top: 20px;
+  margin-bottom: 26px;
+  color: #96969e;
+  text-align: justify;
+  line-height: 1.4;
 }
-  
+
 .card-spl:link,
 .card-spl:visited {
-    text-decoration: none;
-    text-transform: uppercase;
-    letter-spacing: 1.5px;
-    font-size: 18px;
-    padding: 8px 16px;
-    background-color: #a2a2a33f;
-    border-radius: 60px;
-    color: #47b347;
-    font-weight: 600;
-    display: inline-block;
-    transition: all 0.5s;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  font-size: 18px;
+  padding: 8px 16px;
+  background-color: #a2a2a33f;
+  border-radius: 60px;
+  color: #47b347;
+  font-weight: 600;
+  display: inline-block;
+  transition: all 0.5s;
 }
-  
+
 .card-spl:hover,
 .card-spl:active {
-    box-shadow: inset 0 0 0 1.5px #96969e;
+  box-shadow: inset 0 0 0 1.5px #96969e;
 }
-  
+
+.card-spl .icon {
+  width: 100%;
+  border-radius: 50%;
+  text-align: center;
+}
+
+.card-spl .icon-div {
+  width: 150px;
+  margin-bottom: 32px;
+}
+
