--- a/src/css/components-css/DashBoardCard.css
+++ b/src/css/components-css/DashBoardCard.css
@@ -1,35 +1,32 @@
 .dashboard-card {
+  min-width: 250px;
+  padding: 20px 18px;
+  background-color: #6a5acd;
+  border-radius: 8px;
   display: flex;
   align-items: center;
-  background-color: #6a5acd;
-  border-radius: 15px;
-  padding: 20px 30px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  color: white;
+  justify-content: space-between;
 }
 
 .dashboard-card-content {
-  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 
 .dashboard-card-title {
-  margin: 0;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
+  letter-spacing: 1px;
+  text-transform: uppercase;
 }
 
 .dashboard-card-number {
-  margin: 5px 0 0;
-  font-size: 24px;
-  font-weight: 700;
+  font-size: 18px;
+  letter-spacing: 1.4px;
+  font-weight: 500;
 }
 
-.dashboard-card-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
+.dashboard-icon {
+  font-size: 48px;
 }
