--- a/src/css/components-css/Scan.css
+++ b/src/css/components-css/Scan.css
@@ -143,11 +143,42 @@
   }
 }
 
+.scanned-result {
+  margin-left: 5px;
+  margin-top: 16px;
+  font-size: 18px;
+}
+
+.message {
+  font-weight: 500;
+  letter-spacing: 1px;
+}
+
+.safe-text {
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 800;
+  color: #36b78e;
+}
+
+.risk-text {
+  font-size: 24px;
+  text-transform: uppercase;
+  font-weight: 800;
+  color: #f43755;
+}
+
 @keyframes wave {
   0% {
     transform: rotate(0deg);
   }
+  25% {
+    transform: rotate(20deg);
+  }
   50% {
+    transform: rotate(10deg);
+  }
+  75% {
     transform: rotate(20deg);
   }
   100% {
