--- a/src/css/components-css/Scan.css
+++ b/src/css/components-css/Scan.css
@@ -6,6 +6,8 @@
 
 .main-dashboard {
   display: flex;
+  flex-direction: column;
+  flex: 1;
 }
 
 .dashboard-counters {
@@ -120,6 +122,7 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 1000;
