--- a/src/css/components-css/Footer.css
+++ b/src/css/components-css/Footer.css
@@ -1,102 +1,97 @@
-/* src/Footer.css */
+.border-line {
+  background-color: #fff;
+  height: 2px;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 64px;
+}
+
 .footer {
   background-color: #09090b;
   color: #fff;
-  padding: 140px 32px 8px 32px;
+  padding: 64px 32px 64px 32px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.footer-content {
-  display: flex;
-  padding-left: 40px;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  width: 100%;
   max-width: 1200px;
-  margin-bottom: 2rem;
+  gap: 96px;
+  margin: 0 auto;
 }
 
-.footer-logo-section {
-  max-width: 200px;
+.logo-about {
+  width: 300px;
 }
 
 .footer-logo {
-  max-width: 100%;
-  margin-bottom: 1rem;
-}
-
-.footer-links {
   display: flex;
-  justify-content: space-around;
-  flex: 1;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 14px;
 }
 
-.footer-column {
-  margin: 0 1rem;
+.footer-about {
+  font-size: 14px;
+  line-height: 1.4;
+  margin-bottom: 12px;
+  text-align: justify;
 }
 
-.footer-column h3 {
-  margin-bottom: 1rem;
-  font-size: 1.2rem;
+.power {
+  font-size: 28px;
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 1px;
 }
 
-.footer-column ul {
-  list-style: none;
-  padding: 0;
+.footer-heading {
+  text-transform: uppercase;
+  font-size: 24px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  margin-bottom: 20px;
 }
 
-.footer-column ul li {
-  margin-bottom: 0.5rem;
+.footers-links {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
 }
 
-.footer-column ul li a {
-  color: #fff;
+.footer-link a:link,
+.footer-link a:visited {
   text-decoration: none;
+  color: #bbb;
+  font-size: 16px;
+  letter-spacing: 0.4px;
 }
 
-.footer-column ul li a:hover {
-  text-decoration: underline;
-}
-
-.footer-social {
+.footer-link {
   display: flex;
-  gap: 1rem;
-  list-style: none;
-  padding: 0;
-  margin-bottom: 1rem;
+  gap: 4px;
+  align-items: center;
 }
 
-.footer-social li a {
+.footer-icon {
+  font-size: 20px;
+  color: #bbb;
+  transition: transform 0.4s;
+}
+
+.footer-link a {
+  transition: all 0.4s;
+}
+
+.footer-link:hover a {
   color: #fff;
-  font-size: 1.5rem;
 }
 
-.footer-subscribe {
-  display: flex;
-  gap: 0.5rem;
-  margin-top: 1rem;
-}
-
-.footer-subscribe input {
-  padding: 0.5rem;
-  border: none;
-  border-radius: 0.25rem;
-  flex: 1;
-}
-
-.footer-subscribe button {
-  padding: 0.5rem 1rem;
-  border: none;
-  border-radius: 0.25rem;
-  background-color: #007bff;
+.footer-link:hover .footer-icon {
   color: #fff;
-  cursor: pointer;
+  transform: translateX(5px);
 }
 
-.footer-bottom {
+.copyright {
   text-align: center;
-  width: 100%;
-  padding: 10px 30px 30px;
+}
+
+.copyright-info {
+  padding: 30px 0;
 }
