--- a/src/css/components-css/PieChart.css
+++ b/src/css/components-css/PieChart.css
@@ -2,9 +2,9 @@
   max-width: 300px;
   margin: 0 auto;
   padding: 10px 0 0 0;
-  background: #09090b;
+  background: #f1f1fb;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
   text-align: center;
 }
 
