--- a/src/css/components-css/DashboardPanel.css
+++ b/src/css/components-css/DashboardPanel.css
@@ -1,5 +1,5 @@
 .left-panel {
-  background-color: #222223;
+  background-color: #f1f1fb;
   padding: 42px 20px 0px 20px;
   width: 300px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -45,11 +45,10 @@
   text-transform: uppercase;
   letter-spacing: 2px;
   font-weight: 800;
-  background: linear-gradient(
-    90deg,
-    rgba(49, 214, 49, 1) 10%,
-    rgba(13, 202, 70, 1) 46%,
-    rgba(0, 249, 255, 1) 79%
+  background: radial-gradient(
+    circle,
+    rgba(70, 70, 70, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
   );
 
   -webkit-background-clip: text;
@@ -68,16 +67,22 @@
 
 .linker li a {
   text-decoration: none;
-  color: #e6e600;
-  font-size: 16px;
+  color: #29355b;
+  font-size: 18px;
   display: flex;
   align-items: center;
   padding: 12px 14px;
-  font-weight: 500;
-  letter-spacing: 1.1px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+
+.linker-link {
+  display: flex;
+  align-items: center;
+  gap: 12px;
 }
 
 .linker li.active a {
-  background-color: #606062;
+  background-color: #c9cbd98b;
   border-radius: 8px;
 }
