--- a/src/css/components-css/Scan.css
+++ b/src/css/components-css/Scan.css
@@ -1,7 +1,12 @@
+.scan-section {
+  min-height: 100vh;
+}
+
 .main-dashboard {
   display: flex;
   flex-direction: column;
   flex: 1;
+  color: #000;
 }
 
 .dashboard-counters {
@@ -55,10 +60,10 @@
   outline: none;
   background: none;
   border: none;
-  border: #6a5acd 4px solid;
+  border: #6a5acd 2px solid;
   padding: 12px 14px;
   border-radius: 8px;
-  color: #f3f3f3;
+  color: #000;
   font-size: 18px;
   font-weight: 500;
   letter-spacing: 1.1px;
@@ -93,6 +98,7 @@
   position: absolute;
   top: 10px;
   right: 55%;
+  color: #000;
   font-size: 48px;
   animation: wave 4s alternate infinite;
 }
@@ -103,9 +109,9 @@
 }
 
 .scan-url::placeholder {
-  color: #fff;
-  font-weight: 600;
-  font-size: 18px;
+  color: #000;
+  font-weight: 500;
+  font-size: 16px;
 }
 
 .loading-overlay {
