--- a/src/css/global.css
+++ b/src/css/global.css
@@ -24,6 +24,10 @@ html::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
