--- a/src/css/components-css/ScanSummary.css
+++ b/src/css/components-css/ScanSummary.css
@@ -32,6 +32,7 @@
 .logs-entry li {
   flex-shrink: 0;
   width: 100%;
+  min-width: max-content;
   padding: 16px;
   flex-direction: column;
   display: flex;
